tests/final/expect/15__diag__axis4_wave9_macro_alias_permute_a_arity_fail_no_crash.diag
Diagnostics:
axis4_wave9_perm_a_layer_b.h:542203:28: error: macro 'AX4_W9_PERM_A_TARGET' requires 3 argument(s), got 2
Error: preprocessing failed
axis4_wave9_perm_a_layer_a.h:1084299:28: error: macro 'AX4_W9_PERM_A_TARGET' requires 3 argument(s), got 2
axis4_wave9_perm_a_layer_a.h:1084299:28: error: macro 'AX4_W9_PERM_A_TARGET' requires 3 argument(s), got 2
